cmd/cc/y.output

state 0
	$accept: .prog $end 
	prog: .    (1)

	.  reduce 1 (src line 69)

	prog  goto 1

1: shift/reduce conflict (shift 12(0), red'n 182(0)) on LTYPE
state 1
	$accept:  prog.$end 
	prog:  prog.xdecl 
	zctlist: .    (182)

	$end  accept
	LTYPE  shift 12
	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LSTRUCT  shift 9
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNION  shift 10
	LUNSIGNED  shift 18
	LVOID  shift 21
	LENUM  shift 11
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 182 (src line 929)

	gcname  goto 22
	cname  goto 24
	gname  goto 23
	tname  goto 7
	gcnlist  goto 8
	complex  goto 6
	types  goto 5
	xdecl  goto 2
	zctlist  goto 3
	ctlist  goto 4

state 2
	prog:  prog xdecl.    (2)

	.  reduce 2 (src line 70)


state 3
	xdecl:  zctlist.; 
	xdecl:  zctlist.xdlist ; 
	xdecl:  zctlist.xdecor $$5 pdecl $$6 block 

	;  shift 35
	*  shift 39
	(  shift 41
	LNAME  shift 43
	LTYPE  shift 44
	.  error

	ltag  goto 42
	xdecor  goto 37
	xdecor2  goto 38
	tag  goto 40
	xdlist  goto 36

state 4
	zctlist:  ctlist.    (183)

	.  reduce 183 (src line 934)


state 5
	ctlist:  types.    (193)

	.  reduce 193 (src line 996)


state 6
	types:  complex.    (184)
	types:  complex.gctnlist 

	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNSIGNED  shift 18
	LVOID  shift 21
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 184 (src line 936)

	gctname  goto 46
	cname  goto 49
	gname  goto 48
	tname  goto 47
	gctnlist  goto 45

state 7
	types:  tname.    (185)
	types:  tname.gctnlist 

	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNSIGNED  shift 18
	LVOID  shift 21
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 185 (src line 942)

	gctname  goto 46
	cname  goto 49
	gname  goto 48
	tname  goto 47
	gctnlist  goto 50

8: shift/reduce conflict (shift 12(0), red'n 186(0)) on LTYPE
state 8
	types:  gcnlist.    (186)
	types:  gcnlist.complex zgnlist 
	types:  gcnlist.tname 
	types:  gcnlist.tname gctnlist 
	gcnlist:  gcnlist.gcname 

	LTYPE  shift 12
	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LSTRUCT  shift 9
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNION  shift 10
	LUNSIGNED  shift 18
	LVOID  shift 21
	LENUM  shift 11
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 186 (src line 947)

	gcname  goto 53
	cname  goto 24
	gname  goto 23
	tname  goto 52
	complex  goto 51

state 9
	complex:  LSTRUCT.ltag 
	complex:  LSTRUCT.ltag $$195 sbody 
	complex:  LSTRUCT.sbody 

	LNAME  shift 43
	LTYPE  shift 44
	{  shift 56
	.  error

	ltag  goto 54
	sbody  goto 55

state 10
	complex:  LUNION.ltag 
	complex:  LUNION.ltag $$199 sbody 
	complex:  LUNION.sbody 

	LNAME  shift 43
	LTYPE  shift 44
	{  shift 56
	.  error

	ltag  goto 57
	sbody  goto 58

state 11
	complex:  LENUM.ltag 
	complex:  LENUM.ltag $$203 { $$204 enum } 
	complex:  LENUM.{ $$206 enum } 

	LNAME  shift 43
	LTYPE  shift 44
	{  shift 60
	.  error

	ltag  goto 59

state 12
	complex:  LTYPE.    (208)

	.  reduce 208 (src line 1096)


state 13
	tname:  LCHAR.    (224)

	.  reduce 224 (src line 1145)


state 14
	tname:  LSHORT.    (225)

	.  reduce 225 (src line 1147)


state 15
	tname:  LINT.    (226)

	.  reduce 226 (src line 1148)


state 16
	tname:  LLONG.    (227)

	.  reduce 227 (src line 1149)


state 17
	tname:  LSIGNED.    (228)

	.  reduce 228 (src line 1150)


state 18
	tname:  LUNSIGNED.    (229)

	.  reduce 229 (src line 1151)


state 19
	tname:  LFLOAT.    (230)

	.  reduce 230 (src line 1152)


state 20
	tname:  LDOUBLE.    (231)

	.  reduce 231 (src line 1153)


state 21
	tname:  LVOID.    (232)

	.  reduce 232 (src line 1154)


state 22
	gcnlist:  gcname.    (216)

	.  reduce 216 (src line 1122)


state 23
	gcname:  gname.    (218)

	.  reduce 218 (src line 1129)


state 24
	gcname:  cname.    (219)

	.  reduce 219 (src line 1131)


state 25
	gname:  LCONSTNT.    (240)

	.  reduce 240 (src line 1165)


state 26
	gname:  LVOLATILE.    (241)

	.  reduce 241 (src line 1167)


state 27
	gname:  LRESTRICT.    (242)

	.  reduce 242 (src line 1168)


state 28
	cname:  LAUTO.    (233)

	.  reduce 233 (src line 1156)


state 29
	cname:  LSTATIC.    (234)

	.  reduce 234 (src line 1158)


state 30
	cname:  LEXTERN.    (235)

	.  reduce 235 (src line 1159)


state 31
	cname:  LTYPEDEF.    (236)

	.  reduce 236 (src line 1160)


state 32
	cname:  LTYPESTR.    (237)

	.  reduce 237 (src line 1161)


state 33
	cname:  LREGISTER.    (238)

	.  reduce 238 (src line 1162)


state 34
	cname:  LINLINE.    (239)

	.  reduce 239 (src line 1163)


state 35
	xdecl:  zctlist ;.    (3)

	.  reduce 3 (src line 75)


state 36
	xdecl:  zctlist xdlist.; 
	xdlist:  xdlist., xdlist 

	;  shift 61
	,  shift 62
	.  error


state 37
	xdecl:  zctlist xdecor.$$5 pdecl $$6 block 
	xdlist:  xdecor.    (8)
	xdlist:  xdecor.$$9 = init 
	$$5: .    (5)
	$$9: .    (9)

	;  reduce 8 (src line 110)
	,  reduce 8 (src line 110)
	=  reduce 9 (src line 115)
	.  reduce 5 (src line 81)

	$$5  goto 63
	$$9  goto 64

state 38
	xdecor:  xdecor2.    (12)
	xdecor2:  xdecor2.( zarglist ) 
	xdecor2:  xdecor2.[ zexpr ] 

	[  shift 66
	(  shift 65
	.  reduce 12 (src line 125)


state 39
	xdecor:  *.zgnlist xdecor 
	zgnlist: .    (211)

	.  reduce 211 (src line 1108)

	zgnlist  goto 67

state 40
	xdecor2:  tag.    (14)

	.  reduce 14 (src line 133)


state 41
	xdecor2:  (.xdecor ) 

	*  shift 39
	(  shift 41
	LNAME  shift 43
	LTYPE  shift 44
	.  error

	ltag  goto 42
	xdecor  goto 68
	xdecor2  goto 38
	tag  goto 40

state 42
	tag:  ltag.    (244)

	.  reduce 244 (src line 1187)


state 43
	ltag:  LNAME.    (245)

	.  reduce 245 (src line 1200)


state 44
	ltag:  LTYPE.    (246)

	.  reduce 246 (src line 1202)


state 45
	types:  complex gctnlist.    (187)
	gctnlist:  gctnlist.gctname 

	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNSIGNED  shift 18
	LVOID  shift 21
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 187 (src line 953)

	gctname  goto 69
	cname  goto 49
	gname  goto 48
	tname  goto 47

state 46
	gctnlist:  gctname.    (209)

	.  reduce 209 (src line 1101)


state 47
	gctname:  tname.    (213)

	.  reduce 213 (src line 1117)


state 48
	gctname:  gname.    (214)

	.  reduce 214 (src line 1119)


state 49
	gctname:  cname.    (215)

	.  reduce 215 (src line 1120)


state 50
	types:  tname gctnlist.    (188)
	gctnlist:  gctnlist.gctname 

	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNSIGNED  shift 18
	LVOID  shift 21
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 188 (src line 962)

	gctname  goto 69
	cname  goto 49
	gname  goto 48
	tname  goto 47

state 51
	types:  gcnlist complex.zgnlist 
	zgnlist: .    (211)

	.  reduce 211 (src line 1108)

	zgnlist  goto 70

state 52
	types:  gcnlist tname.    (190)
	types:  gcnlist tname.gctnlist 

	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNSIGNED  shift 18
	LVOID  shift 21
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 190 (src line 974)

	gctname  goto 46
	cname  goto 49
	gname  goto 48
	tname  goto 47
	gctnlist  goto 71

state 53
	gcnlist:  gcnlist gcname.    (217)

	.  reduce 217 (src line 1124)


state 54
	complex:  LSTRUCT ltag.    (194)
	complex:  LSTRUCT ltag.$$195 sbody 
	$$195: .    (195)

	{  reduce 195 (src line 1009)
	.  reduce 194 (src line 1003)

	$$195  goto 72

state 55
	complex:  LSTRUCT sbody.    (197)

	.  reduce 197 (src line 1022)


state 56
	sbody:  {.$$180 edecl } 
	$$180: .    (180)

	.  reduce 180 (src line 906)

	$$180  goto 73

state 57
	complex:  LUNION ltag.    (198)
	complex:  LUNION ltag.$$199 sbody 
	$$199: .    (199)

	{  reduce 199 (src line 1035)
	.  reduce 198 (src line 1030)

	$$199  goto 74

state 58
	complex:  LUNION sbody.    (201)

	.  reduce 201 (src line 1048)


state 59
	complex:  LENUM ltag.    (202)
	complex:  LENUM ltag.$$203 { $$204 enum } 
	$$203: .    (203)

	{  reduce 203 (src line 1065)
	.  reduce 202 (src line 1056)

	$$203  goto 75

state 60
	complex:  LENUM {.$$206 enum } 
	$$206: .    (206)

	.  reduce 206 (src line 1087)

	$$206  goto 76

state 61
	xdecl:  zctlist xdlist ;.    (4)

	.  reduce 4 (src line 80)


state 62
	xdlist:  xdlist ,.xdlist 

	*  shift 39
	(  shift 41
	LNAME  shift 43
	LTYPE  shift 44
	.  error

	ltag  goto 42
	xdecor  goto 78
	xdecor2  goto 38
	tag  goto 40
	xdlist  goto 77

state 63
	xdecl:  zctlist xdecor $$5.pdecl $$6 block 
	pdecl: .    (24)

	.  reduce 24 (src line 192)

	pdecl  goto 79

state 64
	xdlist:  xdecor $$9.= init 

	=  shift 80
	.  error


state 65
	xdecor2:  xdecor2 (.zarglist ) 
	zarglist: .    (62)

	.  shift 85
	LNAME  shift 86
	LTYPE  shift 12
	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LSTRUCT  shift 9
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNION  shift 10
	LUNSIGNED  shift 18
	LVOID  shift 21
	LENUM  shift 11
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 62 (src line 332)

	gcname  goto 22
	cname  goto 24
	gname  goto 23
	tname  goto 7
	gcnlist  goto 8
	tlist  goto 84
	complex  goto 6
	types  goto 87
	zarglist  goto 81
	arglist  goto 82
	name  goto 83

state 66
	xdecor2:  xdecor2 [.zexpr ] 
	zexpr: .    (102)

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  reduce 102 (src line 526)

	name  goto 105
	expr  goto 90
	xuexpr  goto 91
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115
	zexpr  goto 88
	lexpr  goto 89

state 67
	xdecor:  * zgnlist.xdecor 
	zgnlist:  zgnlist.gname 

	*  shift 39
	(  shift 41
	LNAME  shift 43
	LTYPE  shift 44
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	.  error

	ltag  goto 42
	gname  goto 119
	xdecor  goto 118
	xdecor2  goto 38
	tag  goto 40

state 68
	xdecor2:  ( xdecor.) 

	)  shift 120
	.  error


state 69
	gctnlist:  gctnlist gctname.    (210)

	.  reduce 210 (src line 1103)


state 70
	types:  gcnlist complex zgnlist.    (189)
	zgnlist:  zgnlist.gname 

	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	.  reduce 189 (src line 968)

	gname  goto 119

state 71
	types:  gcnlist tname gctnlist.    (191)
	gctnlist:  gctnlist.gctname 

	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNSIGNED  shift 18
	LVOID  shift 21
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 191 (src line 980)

	gctname  goto 69
	cname  goto 49
	gname  goto 48
	tname  goto 47

state 72
	complex:  LSTRUCT ltag $$195.sbody 

	{  shift 56
	.  error

	sbody  goto 121

state 73
	sbody:  { $$180.edecl } 

	LTYPE  shift 12
	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LSTRUCT  shift 9
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNION  shift 10
	LUNSIGNED  shift 18
	LVOID  shift 21
	LENUM  shift 11
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  error

	gcname  goto 22
	cname  goto 24
	gname  goto 23
	tname  goto 7
	gcnlist  goto 8
	tlist  goto 123
	complex  goto 6
	types  goto 87
	edecl  goto 122

state 74
	complex:  LUNION ltag $$199.sbody 

	{  shift 56
	.  error

	sbody  goto 124

state 75
	complex:  LENUM ltag $$203.{ $$204 enum } 

	{  shift 125
	.  error


state 76
	complex:  LENUM { $$206.enum } 

	LNAME  shift 127
	.  error

	enum  goto 126

state 77
	xdlist:  xdlist., xdlist 
	xdlist:  xdlist , xdlist.    (11)

	.  reduce 11 (src line 123)


state 78
	xdlist:  xdecor.    (8)
	xdlist:  xdecor.$$9 = init 
	$$9: .    (9)

	=  reduce 9 (src line 115)
	.  reduce 8 (src line 110)

	$$9  goto 64

state 79
	xdecl:  zctlist xdecor $$5 pdecl.$$6 block 
	pdecl:  pdecl.ctlist pdlist ; 
	$$6: .    (6)

	LTYPE  shift 12
	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSTATIC  shift 29
	LSTRUCT  shift 9
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNION  shift 10
	LUNSIGNED  shift 18
	LVOID  shift 21
	LENUM  shift 11
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LRESTRICT  shift 27
	LINLINE  shift 34
	.  reduce 6 (src line 95)

	gcname  goto 22
	cname  goto 24
	gname  goto 23
	tname  goto 7
	gcnlist  goto 8
	complex  goto 6
	types  goto 5
	$$6  goto 128
	ctlist  goto 129

state 80
	xdlist:  xdecor $$9 =.init 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	{  shift 132
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	expr  goto 131
	xuexpr  goto 91
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115
	init  goto 130

state 81
	xdecor2:  xdecor2 ( zarglist.) 

	)  shift 133
	.  error


state 82
	zarglist:  arglist.    (63)
	arglist:  arglist., arglist 

	,  shift 134
	.  reduce 63 (src line 336)


state 83
	arglist:  name.    (64)

	.  reduce 64 (src line 342)


state 84
	arglist:  tlist.abdecor 
	arglist:  tlist.xdecor 
	abdecor: .    (39)

	*  shift 138
	[  shift 142
	(  shift 140
	LNAME  shift 43
	LTYPE  shift 44
	.  reduce 39 (src line 249)

	ltag  goto 42
	xdecor  goto 136
	xdecor2  goto 38
	tag  goto 40
	abdecor  goto 135
	abdecor1  goto 137
	abdecor2  goto 139
	abdecor3  goto 141

state 85
	arglist:  ... . 

	.  shift 143
	.  error


state 86
	name:  LNAME.    (243)

	.  reduce 243 (src line 1170)


state 87
	tlist:  types.    (192)

	.  reduce 192 (src line 987)


state 88
	xdecor2:  xdecor2 [ zexpr.] 

	]  shift 144
	.  error


state 89
	zexpr:  lexpr.    (103)

	.  reduce 103 (src line 530)


state 90
	lexpr:  expr.    (104)
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.LRSH expr 
	expr:  expr.LLSH expr 
	expr:  expr.< expr 
	expr:  expr.> expr 
	expr:  expr.LLE expr 
	expr:  expr.LGE expr 
	expr:  expr.LEQ expr 
	expr:  expr.LNE expr 
	expr:  expr.& expr 
	expr:  expr.^ expr 
	expr:  expr.| expr 
	expr:  expr.LANDAND expr 
	expr:  expr.LOROR expr 
	expr:  expr.? cexpr : expr 
	expr:  expr.= expr 
	expr:  expr.LPE expr 
	expr:  expr.LME expr 
	expr:  expr.LMLE expr 
	expr:  expr.LDVE expr 
	expr:  expr.LMDE expr 
	expr:  expr.LLSHE expr 
	expr:  expr.LRSHE expr 
	expr:  expr.LANDE expr 
	expr:  expr.LXORE expr 
	expr:  expr.LORE expr 

	=  shift 164
	LPE  shift 165
	LME  shift 166
	LMLE  shift 167
	LDVE  shift 168
	LMDE  shift 169
	LRSHE  shift 171
	LLSHE  shift 170
	LANDE  shift 172
	LXORE  shift 173
	LORE  shift 174
	?  shift 163
	LOROR  shift 162
	LANDAND  shift 161
	|  shift 160
	^  shift 159
	&  shift 158
	LEQ  shift 156
	LNE  shift 157
	<  shift 152
	>  shift 153
	LLE  shift 154
	LGE  shift 155
	LLSH  shift 151
	LRSH  shift 150
	+  shift 148
	-  shift 149
	*  shift 145
	/  shift 146
	%  shift 147
	.  reduce 104 (src line 532)


state 91
	expr:  xuexpr.    (107)

	.  reduce 107 (src line 546)


state 92
	xuexpr:  uexpr.    (138)

	.  reduce 138 (src line 669)


state 93
	xuexpr:  (.tlist abdecor ) xuexpr 
	xuexpr:  (.tlist abdecor ) { ilist } 
	pexpr:  (.cexpr ) 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LTYPE  shift 12
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LAUTO  shift 28
	LCHAR  shift 13
	LDOUBLE  shift 20
	LEXTERN  shift 30
	LFLOAT  shift 19
	LINT  shift 15
	LLONG  shift 16
	LREGISTER  shift 33
	LSHORT  shift 14
	LSIZEOF  shift 103
	LSTATIC  shift 29
	LSTRUCT  shift 9
	LTYPEDEF  shift 31
	LTYPESTR  shift 32
	LUNION  shift 10
	LUNSIGNED  shift 18
	LVOID  shift 21
	LENUM  shift 11
	LSIGNED  shift 17
	LCONSTNT  shift 25
	LVOLATILE  shift 26
	LSIGNOF  shift 104
	LRESTRICT  shift 27
	LINLINE  shift 34
	!  shift 99
	~  shift 100
	.  error

	gcname  goto 22
	cname  goto 24
	gname  goto 23
	tname  goto 7
	gcnlist  goto 8
	tlist  goto 175
	complex  goto 6
	types  goto 87
	name  goto 105
	cexpr  goto 176
	expr  goto 177
	xuexpr  goto 91
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 94
	uexpr:  pexpr.    (141)
	pexpr:  pexpr.( zelist ) 
	pexpr:  pexpr.[ cexpr ] 
	pexpr:  pexpr.LMG ltag 
	pexpr:  pexpr.. ltag 
	pexpr:  pexpr.LPP 
	pexpr:  pexpr.LMM 

	LMM  shift 183
	LPP  shift 182
	LMG  shift 180
	.  shift 181
	[  shift 179
	(  shift 178
	.  reduce 141 (src line 685)


state 95
	uexpr:  *.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 184
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 96
	uexpr:  &.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 185
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 97
	uexpr:  +.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 186
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 98
	uexpr:  -.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 187
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 99
	uexpr:  !.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 188
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 100
	uexpr:  ~.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 189
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 101
	uexpr:  LPP.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 190
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 102
	uexpr:  LMM.xuexpr 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 93
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	xuexpr  goto 191
	pexpr  goto 94
	uexpr  goto 92
	string  goto 114
	lstring  goto 115

state 103
	uexpr:  LSIZEOF.uexpr 
	pexpr:  LSIZEOF.( tlist abdecor ) 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 193
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	pexpr  goto 94
	uexpr  goto 192
	string  goto 114
	lstring  goto 115

state 104
	uexpr:  LSIGNOF.uexpr 
	pexpr:  LSIGNOF.( tlist abdecor ) 

	&  shift 96
	+  shift 97
	-  shift 98
	*  shift 95
	LMM  shift 102
	LPP  shift 101
	(  shift 195
	LNAME  shift 86
	LFCONST  shift 111
	LDCONST  shift 110
	LCONST  shift 106
	LLCONST  shift 107
	LUCONST  shift 108
	LULCONST  shift 109
	LVLCONST  shift 112
	LUVLCONST  shift 113
	LSTRING  shift 116
	LLSTRING  shift 117
	LSIZEOF  shift 103
	LSIGNOF  shift 104
	!  shift 99
	~  shift 100
	.  error

	name  goto 105
	pexpr  goto 94
	uexpr  goto 194
	string  goto 114
	lstring  goto 115

state 105
	pexpr:  name.    (161)

	.  reduce 161 (src line 777)


state 106
	pexpr:  LCONST.    (162)

	.  reduce 162 (src line 778)


state 107
	pexpr:  LLCONST.    (163)
